<resources>
    <string-array name="indices_temas">
        <item> Objetivo </item>
        <item>Destinatarios</item>
        <item>¿Qué es Java?</item>
        <item>¿Qué es un objeto?</item>
        <item>¿Qué es una clase?</item>
        <item>¿Qué es un Metodo?</item>
        <item>Estructura de control</item>
        <item>Examen Final</item>
    </string-array>
    <string-array name="indices_temas_off">
        <item> Objetivo </item>
        <item>Destinatarios</item>
        <item>¿Qué es Java?</item>
        <item>¿Qué es un objeto?</item>
        <item>¿Qué es una clase?</item>
        <item>¿Qué es un Metodo?</item>
        <item>Estructura de control</item>
    </string-array>
    <string name="pass">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="enter">Entrar</string>
    <string name="sing_up">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="text_orientation">Para obtener el curso completo es necesario registrarte.</string>
    <string name="text_register">Registro</string>
    <string name="previous">Previo</string>
    <string name="mail">Correo Electrónico</string>
    <string name="sig_user">Usuario</string>
    <string name="sig_password">Contraseña</string>
    <string name="sig_confirm_pass">Confirma contraseña</string>
    <string name="sig_reg">Registrarse</string>
    <string name="sig_return">Regresar</string>
    <string name="developer">DESARROLLADOR</string>
    <string name="develop_uni">Universidad Tecnológica del Norte de Guanajuato</string>
    <string name="developer_creator">Alumno</string>
    <string name="developer_name">Gustavo de Jesús Martínez Mojica</string>
    <string name="developer_ver">Versión:</string>
    <string name="deve_ver">1.0</string>
    <string name="developer_bibliography">Bibliografía:</string>
    <string name="developer_info">Java desde cero.pdf</string>
    <string name="developer_uni">Universidad:</string>
    <string name="name_school">UTNG</string>
    <string name="developer_matter">Materia:</string>
    <string name="name_matter">Desarrollo de aplicaciones III</string>
    <string name="title_primary">Titulo</string>
    <string name="conten">Contenido</string>
    <string name="play">Iniciar quiz</string>
    <string name="presentation_one">A continuación presentaras un pequeño examen para poder saber cuanto fue tu aprendizaje con este tema.</string>
</resources>