<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@color/fondo"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/javalan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    </LinearLayout>

    <Button
        android:id="@+id/btn_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/previous"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/MyColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_orientation"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/MyColor"/>

    <Button
        android:id="@+id/btn_ingresar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mybutton"
        android:text="@string/text_register"
        android:layout_marginTop="10dp"
        android:textColor="@color/MyColor"/>
</LinearLayout>
