<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_on_what_class"
            android:layout_width="245dp"
            android:layout_height="163dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="37dp" />

        <TextView
            android:id="@+id/title_on_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_on_what_class"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:text="@string/title_primary"
            android:textColor="@color/MyColor"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_what_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_on_class"
            android:paddingTop="30dp"
            android:text="@string/conten"
            android:textColor="@color/MyColor"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageButton
            android:id="@+id/imv_watch_video_class"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_below="@+id/content_what_class"
            android:layout_centerHorizontal="true"
            android:background="@drawable/play" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imv_watch_video_class"
            android:id="@+id/txv_watch_video_class"
            android:layout_centerHorizontal="true"
            android:text="@string/presentation_one"
            android:textColor="@color/MyColor"
            android:paddingTop="20dp"/>


        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/player"
            android:layout_below="@id/txv_watch_video_class"
            android:id="@+id/img_video_whjava"
            android:hint="@string/play"
            android:layout_centerHorizontal="true"
            android:textColor="@color/MyColor"
            android:onClick="Quiz"
            />

    </RelativeLayout>
</ScrollView>