<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/fondo"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context="utng.edu.mx.login.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_main"
            android:layout_width="80pt"
            android:layout_height="80pt"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />


        <EditText
            android:textColor="@color/MyColor"
            android:textColorHint="@color/MyColor"
            android:id="@+id/TFusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_main"
            android:layout_marginTop="20dp"
            android:hint="@string/user"
            android:padding="10dp"
            android:background="@drawable/mybutton"/>

        <requestFocus></requestFocus>

        <EditText
            android:textColor="@color/MyColor"
            android:textColorHint="@color/MyColor"
            android:id="@+id/TFpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TFusername"
            android:layout_marginTop="10dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@drawable/mybutton"/>


        <Button
            android:id="@+id/Blogin"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/TFpassword"
            android:layout_marginTop="40dp"
            android:background="@drawable/mybutton"
            android:onClick="onButtonClick"
            android:text="@string/enter"
            android:textColor="@color/MyColor"
            />

        <Button
            android:id="@+id/Bsignup"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:background="@drawable/mybutton"
            android:onClick="onButtonClick"
            android:text="@string/sing_up"
            android:textColor="@color/MyColor"
            />


    </RelativeLayout>
</ScrollView>
