<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="245dp"
            android:layout_height="163dp"
            android:id="@+id/img_on_examen_final"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp" />
        <TextView
            android:layout_gravity="center"
            android:id="@+id/title_on_examen_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_primary"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_below="@+id/img_on_examen_final"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:textColor="@color/MyColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_on_examen_final"
            android:id="@+id/txv_watch_video_class"
            android:layout_centerHorizontal="true"
            android:text="@string/presentation_one"
            android:textColor="@color/MyColor"
            android:paddingTop="20dp"
            android:padding="30dp"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/player"
            android:layout_below="@id/txv_watch_video_class"
            android:id="@+id/img_video_whjava"
            android:hint="@string/play"
            android:layout_centerHorizontal="true"
            android:textColor="@color/MyColor"
            android:onClick="Quiz"
            />






    </RelativeLayout>
</ScrollView>